# IoTSmartBeverage

./: .gitmodules  ESP8266_Code.cpp  ESPFullCode.h  OLD_LoadCellESP8266  README.md  RFID_RPi
balena-containers/: .env  Makefile  README.md  docker-compose-LAYOUT.yml  docker-compose.yml  vars
balena-containers/.balena/: balena.yml
balena-containers/.balena/secrets/: secret-file
balena-containers/backend/: Dockerfile.template  backupDockerfile.template
balena-containers/mysql/: Dockerfile.template
balena-containers/mysql/mysql-init/: 01-user-and-permissions.sql  02-dump.sql  02-mariadb-dump.sql  03-data.sql  Makefile  do.sh
balena-containers/raspberrypirfid/: Dockerfile.template  picode.py  requirements.txt
balena-containers/tests/: test-inputs.sh
balena-containers/update-server/: Dockerfile.template  package-lock.json  server.js
balena-containers/update-server/secrets/: server.crt  server.csr  server.key
blog/: README.md
dockerfiles/: Containerfile
esp/: .gitignore  Containerfile  Makefile  dev-environment.sh  esp.ino  private.key  public.key  readme.txt
esp-code/barhardware/: .gitignore  README.md  platformio.ini
esp-code/bierdeckel/: README.md  platformio.ini
esp/keys/: public.key
esp/self-signed-cert/: .gitignore  cert.pem  cmd-history  ourcert.der
esp/tools/: rtos-signing.py  signing.py
mosquitto-conf/: Makefile  cmd-history
update_server/: .gitignore  Cargo.toml  readme.txt  self-signed-cert  test-request.sh
update_server/src/: main.rs
update_server/tools/: openssl_testserver.sh  test-request.sh  test-tlsv1_3.sh
(+6 files in other folders)
