[package]
name = "update_server"
version = "0.1.0"
authors = ["mulc <buermarc2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
futures = "0.3.15"
base64 = "0.13.0"
log = "0.4.14"
env_logger = "0.8.3"
md5 = "0.7"
